added links to uni-due and uk-essen updated ds.bib

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -1,3 +1,37 @@
+@article{Kraiselburd2012ALP,
+  title={A LOV Protein Modulates the Physiological Attributes of Xanthomonas axonopodis pv. citri Relevant for Host Plant Colonization},
+  author={Ivana Kraiselburd and Anal{\'i}a I. Alet and Mar{\'i}a Laura Tondo and Silvana Petrocelli and Lucas Dami{\'a}n Daurelio and Jesica Monz{\'o}n and Oscar Adolfo Ruiz and Aba Losi and Elena G Orellano},
+  journal={PLoS ONE},
+  year={2012},
+  volume={7}
+}
+
+@article{Tondo2016KatGTB,
+  title={KatG, the Bifunctional Catalase of Xanthomonas citri subsp. citri, Responds to Hydrogen Peroxide and Contributes to Epiphytic Survival on Citrus Leaves},
+  author={Mar{\'i}a Laura Tondo and Mar{\'i}a Laura Delprato and Ivana Kraiselburd and Mar{\'i}a Ver{\'o}nica Fern{\'a}ndez Zenoff and Mar{\'i}a Eugenia Far{\'i}as and Elena G Orellano},
+  journal={PLoS ONE},
+  year={2016},
+  volume={11}
+}
+
+@article{Kraiselburd2013TheLP,
+  title={The LOV Protein of Xanthomonas citri subsp. citri Plays a Significant Role in the Counteraction of Plant Immune Responses during Citrus Canker},
+  author={Ivana Kraiselburd and Lucas Dami{\'a}n Daurelio and Mar{\'i}a Laura Tondo and Paz Merelo and Adriana A. Cortadi and Manuel Tal{\'o}n and Francisco R Tadeo and Elena G Orellano},
+  journal={PLoS ONE},
+  year={2013},
+  volume={8}
+}
+
+@inproceedings{schmidt_towards_2021,
+	title = {Towards a {Trustworthy}, {Secure} and {Reliable} {Enclave} for {Machine} {Learning} in a {Hospital} {Setting}: {The} {Essen} {Medical} {Computing} {Platform} ({EMCP})},
+	doi = {10.1109/CogMI52975.2021.00023},
+	booktitle = {Third {IEEE} {International} {Conference} on {Cognitive} {Machine} {Intelligence}, {CogMI} 2021, {Atlanta}, {GA}, {USA}, {December} 13-15, 2021},
+	publisher = {IEEE},
+	author = {Schmidt, Hendrik F. R. and Schlötterer, Jörg and Bargull, Marcel and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
+	year = {2021},
+	pages = {116--123},
+}
+
 @article{young_role_2010,
 	title = {The {Role} of the {Gut} {Microbiota} in {Ulcerative} {Colitis}},
 	author = {Young, Vincent B and Chang, Eugene B and Meyer, Folker and Sogin, Mitchell L and Schmidt, Thomas M and Tiedje, James},
@@ -1145,9 +1179,6 @@
 	pages = {537},
 }
 
-@article{noauthor_scalable_nodate,
-	title = {A {Scalable} {Data} {Analysis} {Platform} for {Metagenomics}},
-}
 
 @incollection{wilke_metagenomics_2013,
 	title = {A metagenomics portal for a democratized sequencing world},
@@ -1276,7 +1307,6 @@
 
 @article{myrold_terragenome-soil_2014,
 	title = {Terragenome-{The} {Soil} {Metagenome} {Network}},
-	journal = {한국토양비료학회 학술발표회 초록집},
 	author = {Myrold, David and Bailey, Mark and Jansson, Janet and Meyer, Folker and Tiedje, James and Triplett, Eric and Vogel, Timothy},
 	year = {2014},
 	pages = {548--548},
@@ -1502,3 +1532,432 @@
 	year = {2017},
 }
 
+@article{bowers_minimum_2017,
+	title = {Minimum information about a single amplified genome ({MISAG}) and a metagenome-assembled genome ({MIMAG}) of bacteria and archaea},
+	volume = {35},
+	number = {8},
+	journal = {Nature Biotechnology},
+	author = {Bowers, RM and Kyrpides, NC and Stepanauskas, R and Harmon-Smith, M and Doud, D and Reddy, TBK and Schulz, F and Jarett, J and Rivers, AR and Eloe-Fadrosh, EA and {others}},
+	year = {2017},
+}
+
+@article{mcdonald_usa_nodate,
+	title = {{USA}. 3 {Second} {Genome}, {San} {Bruno}, {CA}, {USA}. 4 {Department} of {Computer} {Science}, {Northern} {Arizona} {University}, {Flagstaff}, {AZ}, {USA}. 5 {Argonne} {National} {Laboratory}, {Argonne}, {IL}, {USA}.},
+	author = {McDonald, Daniel and Clemente, Jose C and Kuczynski, Justin and Rideout, Jai Ram and Stombaugh, Jesse and Wendel, Doug and Wilke, Andreas and Huse, Susan and Hufnagle, John and Meyer, Folker and {others}},
+}
+
+@article{wilke_mg-rast_2013-1,
+	title = {{MG}-{RAST} {Technical} {Report} and {Manual} for version 3.3. 6, revision 2},
+	author = {Wilke, Andreas and Glass, Elizabeth M and Bischof, Jared and Braithwaite, Daniel and D’Souza, Mark and Gerlach, Wolfgang and Harrison, Travis and Keegan, Kevin and Matthews, Hunter and Paczian, Tobias and {others}},
+	year = {2013},
+}
+
+@article{wilke_mg-rast_2017,
+	title = {{MG}-{RAST} manual for version 4, revision 3},
+	journal = {Lemont, IL: Argonne National Laboratory},
+	author = {Wilke, Andreas and Gerlach, Wolfgang and Harrison, Travis and Paczian, Tobias and Trimble, William L and Meyer, Folker},
+	year = {2017},
+}
+
+@article{chaterji_federation_2019,
+	title = {Federation in genomics pipelines: techniques and challenges},
+	volume = {20},
+	number = {1},
+	journal = {Briefings in bioinformatics},
+	author = {Chaterji, Somali and Koo, Jinkyu and Li, Ninghui and Meyer, Folker and Grama, Ananth and Bagchi, Saurabh},
+	year = {2019},
+	note = {Publisher: Oxford University Press},
+	pages = {235--244},
+}
+
+@inproceedings{ross_case_2016,
+	title = {A case study in using discrete-event simulation to improve the scalability of {MG}-{RAST}},
+	booktitle = {Proceedings of the 2016 {ACM} {SIGSIM} {Conference} on {Principles} of {Advanced} {Discrete} {Simulation}},
+	author = {Ross, Caitlin and Mubarak, Misbah and Jenkins, John and Carns, Philip and Carothers, Christopher D and Ross, Robert and Tang, Wei and Gerlach, Wolfgang and Meyer, Folker},
+	year = {2016},
+	pages = {211--220},
+}
+
+@article{arkin_doe_2016,
+	title = {The {DOE} systems biology knowledgebase ({KBase})},
+	journal = {BioRxiv},
+	author = {Arkin, Adam P and Stevens, Rick L and Cottingham, Robert W and Maslov, Sergei and Henry, Christopher S and Dehal, Paramvir and Ware, Doreen and Perez, Fernando and Harris, Nomi L and Canon, Shane and {others}},
+	year = {2016},
+	note = {Publisher: Cold Spring Harbor Laboratory},
+	pages = {096354},
+}
+
+@incollection{glass_mg-rast_2015,
+	title = {{MG}-{RAST}, a metagenomics service for the analysis of microbial community structure and function},
+	booktitle = {Hydrocarbon and {Lipid} {Microbiology} {Protocols}},
+	publisher = {Springer, Berlin, Heidelberg},
+	author = {Glass, Elizabeth M and Meyer, Folker},
+	year = {2015},
+	pages = {69--87},
+}
+
+@article{howe_identification_2016,
+	title = {Identification of the core set of carbon-associated genes in a bioenergy grassland soil},
+	volume = {11},
+	number = {11},
+	journal = {PLoS One},
+	author = {Howe, Adina and Yang, Fan and Williams, Ryan J and Meyer, Folker and Hofmockel, Kirsten S},
+	year = {2016},
+	note = {Publisher: Public Library of Science San Francisco, CA USA},
+	pages = {e0166578},
+}
+
+@inproceedings{mahgoub_suitability_2017,
+	title = {Suitability of nosql systems—cassandra and scylladb—for iot workloads},
+	booktitle = {2017 9th {International} {Conference} on {Communication} {Systems} and {Networks} ({COMSNETS})},
+	publisher = {IEEE},
+	author = {Mahgoub, Ashraf and Ganesh, Sachandhan and Meyer, Folker and Grama, Ananth and Chaterji, Somali},
+	year = {2017},
+	pages = {476--479},
+}
+
+@inproceedings{aufdenkampe_community-driven_2014,
+	title = {The community-driven {BiG} {CZ} software system for integration and analysis of bio-and geoscience data in the critical zone},
+	volume = {2014},
+	booktitle = {{AGU} {Fall} {Meeting} {Abstracts}},
+	author = {Aufdenkampe, Anthony Keith and Mayorga, Emilio and Horsburgh, Jeffery S and Lehnert, KA and Zaslavsky, Ilya and Valentine Jr, DW and Richard, Stephen M and Cheetham, Robert and Meyer, Folker and Henry, Christopher and {others}},
+	year = {2014},
+	pages = {IN41A--3649},
+}
+
+@incollection{trimble_metagenomic_2016,
+	title = {Metagenomic design and sequencing},
+	booktitle = {Field {Guidelines} for {Genetic} {Experimental} {Designs} in {High}-{Throughput} {Sequencing}},
+	publisher = {Springer, Cham},
+	author = {Trimble, William L and Greenwald, Stephanie M and Owens, Sarah and Glass, Elizabeth M and Meyer, Folker},
+	year = {2016},
+	pages = {291--312},
+}
+
+@incollection{keegan_mg-rast_2016,
+	title = {{MG}-{RAST}, a metagenomics service for analysis of microbial community structure and function},
+	booktitle = {Microbial environmental genomics ({MEG})},
+	publisher = {Humana Press, New York, NY},
+	author = {Keegan, Kevin P and Glass, Elizabeth M and Meyer, Folker},
+	year = {2016},
+	pages = {207--233},
+}
+
+@inproceedings{mahgoub_rafiki_2017,
+	title = {Rafiki: {A} middleware for parameter tuning of nosql datastores for dynamic metagenomics workloads},
+	booktitle = {Proceedings of the 18th {ACM}/{IFIP}/{USENIX} {Middleware} {Conference}},
+	author = {Mahgoub, Ashraf and Wood, Paul and Ganesh, Sachandhan and Mitra, Subrata and Gerlach, Wolfgang and Harrison, Travis and Meyer, Folker and Grama, Ananth and Bagchi, Saurabh and Chaterji, Somali},
+	year = {2017},
+	pages = {28--40},
+}
+
+@article{meyer_mg-rast_2019,
+	title = {{MG}-{RAST} version 4—lessons learned from a decade of low-budget ultra-high-throughput metagenome analysis},
+	volume = {20},
+	number = {4},
+	journal = {Briefings in bioinformatics},
+	author = {Meyer, Folker and Bagchi, Saurabh and Chaterji, Somali and Gerlach, Wolfgang and Grama, Ananth and Harrison, Travis and Paczian, Tobias and Trimble, William L and Wilke, Andreas},
+	year = {2019},
+	note = {Publisher: Oxford University Press},
+	pages = {1151--1159},
+}
+
+@article{thompson_communal_2017,
+	title = {A communal catalogue reveals {Earth}’s multiscale microbial diversity},
+	volume = {551},
+	number = {7681},
+	journal = {Nature},
+	author = {Thompson, Luke R and Sanders, Jon G and McDonald, Daniel and Amir, Amnon and Ladau, Joshua and Locey, Kenneth J and Prill, Robert J and Tripathi, Anupriya and Gibbons, Sean M and Ackermann, Gail and {others}},
+	year = {2017},
+	note = {Publisher: Nature Publishing Group},
+	pages = {457--463},
+}
+
+@article{van_brabant_laying_2008,
+	title = {Laying the foundation for a {Genomic} {Rosetta} {Stone}: creating information hubs through the use of consensus identifiers},
+	volume = {12},
+	number = {2},
+	journal = {OMICS A Journal of Integrative Biology},
+	author = {Van Brabant, Bart and Gray, Tanya and Verslyppe, Bert and Kyrpides, Nikos and Dietrich, Karin and Glöckner, Frank Oliver and Cole, James and Farris, Ryan and Schriml, Lynn M and De Vos, Paul and {others}},
+	year = {2008},
+	note = {Publisher: Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 …},
+	pages = {123--127},
+}
+
+@inproceedings{mahgoub_a_suitability_2017,
+	title = {Suitability of {NoSQL} systems—{Cassandra} and {ScyllaDB}—for {IoT} workloads},
+	booktitle = {{IEEE}/{ACM} {COMSNETS} 2017},
+	author = {Mahgoub A, Ganesh S, Meyer F, Grama A, Chaterji S},
+	year = {2017},
+}
+
+@article{arkin_kbase_2018,
+	title = {{KBase}: the {United} {States} department of energy systems biology knowledgebase},
+	volume = {36},
+	number = {7},
+	journal = {Nature biotechnology},
+	author = {Arkin, Adam P and Cottingham, Robert W and Henry, Christopher S and Harris, Nomi L and Stevens, Rick L and Maslov, Sergei and Dehal, Paramvir and Ware, Doreen and Perez, Fernando and Canon, Shane and {others}},
+	year = {2018},
+	note = {Publisher: nature publishing group},
+	pages = {566--569},
+}
+
+@article{hirschman_meeting_2015,
+	title = {Meeting {Report}:“{Metagenomics}, {Metadata} and {Meta}-analysis”({M3}) {Special} {Interest} {Group} at {ISMB} 2009},
+	volume = {2},
+	journal = {Standards in Genomic Sciences},
+	author = {Hirschman, Lynette and Sterk, Peter and Field, Dawn and Wooley, John and Cochrane, Guy and Gilbert, Jack and Kolker, Eugene and Kyrpides, Nikos and Meyer, Folker and Mizrachi, Ilene and {others}},
+	year = {2015},
+	note = {Publisher: Genomic Standards Consortium},
+	pages = {357--360},
+}
+
+@article{keegan_platform-independent_nodate,
+	title = {Platform-independent method for detecting errors in metagenomic sequencing data},
+	author = {Keegan, Kevin P and Trimble, William L and Wilkening, Jared and Wilke, Andreas and Harrison, Travis and D'Souza, Mark and Meyer, Folker},
+}
+
+@article{amann_toward_2019,
+	title = {Toward unrestricted use of public genomic data},
+	volume = {363},
+	number = {6425},
+	journal = {Science},
+	author = {Amann, Rudolf I and Baichoo, Shakuntala and Blencowe, Benjamin J and Bork, Peer and Borodovsky, Mark and Brooksbank, Cath and Chain, Patrick SG and Colwell, Rita R and Daffonchio, Daniele G and Danchin, Antoine and {others}},
+	year = {2019},
+	note = {Publisher: American Association for the Advancement of Science},
+	pages = {350--352},
+}
+
+@article{amann_consent_2019,
+	title = {Consent insufficient for data release—{Response}},
+	volume = {364},
+	number = {6439},
+	journal = {Science},
+	author = {Amann, Rudolf I and Baichoo, Shakuntala and Blencowe, Benjamin J and Bork, Peer and Borodovsky, Mark and Brooksbank, Cath and Chain, Patrick SG and Colwell, Rita R and Daffonchio, Daniele G and Danchin, Antoine and {others}},
+	year = {2019},
+	note = {Publisher: American Association for the Advancement of Science},
+	pages = {446--446},
+}
+
+@inproceedings{mahgoub_sophia_2019,
+	title = {\$\{\${SOPHIA}\$\}\$: {Online} {Reconfiguration} of {Clustered} \$\{\${NoSQL}\$\}\$ {Databases} for \$\{\${Time}-{Varying}\$\}\$ {Workloads}},
+	booktitle = {2019 {USENIX} {Annual} {Technical} {Conference} ({USENIX} {ATC} 19)},
+	author = {Mahgoub, Ashraf and Wood, Paul and Medoff, Alexander and Mitra, Subrata and Meyer, Folker and Chaterji, Somali and Bagchi, Saurabh},
+	year = {2019},
+	pages = {223--240},
+}
+
+@article{larsen_predicted_2011-2,
+	title = {{PREDICTED} {RELATIVE} {METABOLOMIC} {TURNOVER}},
+	author = {Larsen, Peter E and Collart, Frank and Meyer, Folker and Gilbert, Jack A},
+	year = {2011},
+}
+
+@article{aziz_national_nodate,
+	title = {The {National} {Microbial} {Pathogen} {Database} {Resource} ({NMPDR}): {A} genomics platform based on subsystem annotation},
+	author = {Aziz, Ramy K and Meyer, Folker and Paczian, Tobias and Pusch, Gordon},
+}
+
+@article{paczian_mg-rast_2019,
+	title = {The {MG}-{RAST} {API} explorer: an on-ramp for {RESTful} query composition},
+	volume = {20},
+	number = {1},
+	journal = {BMC bioinformatics},
+	author = {Paczian, Tobias and Trimble, William L and Gerlach, Wolfgang and Harrison, Travis and Wilke, Andreas and Meyer, Folker},
+	year = {2019},
+	note = {Publisher: BioMed Central},
+	pages = {1--8},
+}
+
+@article{meyer_proposal_2011-1,
+	title = {{PROPOSAL} {FOR} {OPEN} {DISCUSSION}},
+	author = {Meyer, Folker and Kyrpides, Nikos},
+	year = {2011},
+}
+
+@article{mela_collimonas_2008,
+	title = {Collimonas fungivorans {Ter331}},
+	author = {Mela, Francesca and Fritsche, Kathrin and Boersma, Hidde and van Elsas, Jan D and Bartels, Daniela and Meyer, Folker and de Boer, Wietse and van Veen, Johannes A and Leveau, Johan HJ},
+	year = {2008},
+}
+
+@inproceedings{aronson_barriers_2015,
+	title = {Barriers and potential solutions for {Critical} {Zone} data integration between environmental genomics and the geosciences},
+	volume = {2015},
+	booktitle = {{AGU} {Fall} {Meeting} {Abstracts}},
+	author = {Aronson, Emma L and Meyer, Folker and Packman, Aaron Ian and Mayorga, Emilio},
+	year = {2015},
+	pages = {PA53A--2233},
+}
+
+@article{schriml_covid-19_2020,
+	title = {{COVID}-19 pandemic reveals the peril of ignoring metadata standards},
+	volume = {7},
+	number = {1},
+	journal = {Scientific data},
+	author = {Schriml, Lynn M and Chuvochina, Maria and Davies, Neil and Eloe-Fadrosh, Emiley A and Finn, Robert D and Hugenholtz, Philip and Hunter, Christopher I and Hurwitz, Bonnie L and Kyrpides, Nikos C and Meyer, Folker and {others}},
+	year = {2020},
+	note = {Publisher: Nature Publishing Group},
+	pages = {1--4},
+}
+
+@inproceedings{meyer_state_2019,
+	title = {State of the {Art} and {Limits} to {Bioinformatic} {Analysis} of {Soil} {Metagenomic} {Data}.},
+	booktitle = {{SSSA} {International} {Soils} {Meeting} (2019)},
+	publisher = {ASA-CSSA-SSSA},
+	author = {Meyer, Folker},
+	year = {2019},
+}
+
+@article{schloter_mikrobiomeforschung_2020,
+	title = {Mikrobiome—{Forschung} zwischen {Theorie} und praktischer {Anwendung}},
+	volume = {26},
+	number = {7},
+	journal = {BIOspektrum},
+	author = {Schloter, Michael and Meyer, Folker and Berg, Gabriele},
+	year = {2020},
+	note = {Publisher: Springer Berlin Heidelberg},
+	pages = {714--717},
+}
+
+@article{alton_all-permanent-magnet_nodate,
+	title = {An {All}-{Permanent}-{Magnet} “{Volume}”-{Type} {ECR} {Ion} {Source}: {Initial} {Performance}},
+	author = {Alton, GD and Liu, Y and Bilheux, H and Meyer, F and Murray, SN and Cole, JM and Reed, CA and Mills, GD and Williams, C},
+}
+
+@article{muller_management_2004,
+	title = {Management of {Surgical} {Infections} at the {Anus}, {Rectum} and {Perianal} {Region}},
+	volume = {39},
+	number = {3},
+	journal = {VISZERALCHIRURGIE-STUTTGART-.},
+	author = {Muller, J-S and Meyer, F},
+	year = {2004},
+	note = {Publisher: GEORG THIEME VERLAG},
+	pages = {207--214},
+}
+
+@article{laermann_taylor_nodate,
+	title = {Taylor goes imaginary},
+	author = {Laermann, E and Lombardo, MP and Meyer, F},
+}
+
+@article{laermann_making_2013,
+	title = {Making the most of {Taylor} expansion and imaginary chemical potential},
+	journal = {arXiv preprint arXiv:1304.3247},
+	author = {Laermann, E and Meyer, F and Lombardo, MP},
+	year = {2013},
+}
+
+@inproceedings{rebibo_trali_2006,
+	title = {{TRALI}: {France} makes up for its lost time},
+	volume = {91},
+	booktitle = {{VOX} {SANGUINIS}},
+	publisher = {BLACKWELL PUBLISHING 9600 GARSINGTON RD, OXFORD OX4 2DQ, OXON, ENGLAND},
+	author = {Rebibo, DR and Hauser, LH and Muller, JYM and Dorne, RD and Ducroz, FD and Fontaine, OF and Lee, K and Merillon, MCM and Meyer, FM and Odent-Malaure, HOM and {others}},
+	year = {2006},
+	pages = {281--281},
+}
+
+@inproceedings{messelink_linear_2018,
+	title = {Linear or exponential? {Single}-cell growth laws of {Corynebacterium} glutamicum},
+	volume = {29},
+	booktitle = {{MOLECULAR} {BIOLOGY} {OF} {THE} {CELL}},
+	publisher = {AMER SOC CELL BIOLOGY 8120 WOODMONT AVE, STE 750, BETHESDA, MD 20814-2755 USA},
+	author = {Messelink, J and Meyer, F and Bramkamp, M and Broedersz, C},
+	year = {2018},
+	note = {Issue: 26},
+}
+
+@article{woyke_correction_2018,
+	title = {Correction: {Corrigendum}: {Minimum} information about a single amplified genome ({MISAG}) and a metagenome-assembled genome ({MIMAG}) of bacteria and archaea},
+	volume = {36},
+	journal = {Nature Biotechnology},
+	author = {Woyke, Tanja and Hugenholtz, Philip and Banfield, Jillian F and Schriml, Lynn and Eren, AM and Parks, Donovan H and Yilmaz, Pelin and Meyer, Folker and Lapidus, Alla and Rinke, Christian and {others}},
+	year = {2018},
+	note = {Publisher: Nature Publishing Group},
+	pages = {Article--number},
+}
+
+@article{larsen_relative_2011,
+	title = {Relative metabolomic flux: {Predicting} changes in the environmental metabolome from the metagenome},
+	volume = {1},
+	number = {4},
+	journal = {Microbial Informatics and Experimentation},
+	author = {Larsen, Peter E and Collart, Frank R and Field, Dawn and Meyer, Folker and Keegan, Kevin P and Henry, Christopher S and McGrath, John and Quinn, John and Gilbert, Jack A},
+	year = {2011},
+	note = {Publisher: BioMed Central Ltd.},
+	pages = {1--11},
+}
+
+@article{consortium_minimum_2017,
+	title = {Minimum information about a single amplified genome ({MISAG}) and a metagenome-assembled genome ({MIMAG}) of bacteria and archaea (vol 35, pg 725, 2017)},
+	volume = {36},
+	number = {2},
+	journal = {Nature Biotechnology},
+	author = {Consortium, Genome Standards and {others}},
+	year = {2017},
+	note = {Publisher: Nature Publishing Group},
+	pages = {725},
+}
+
+@article{fahrenkamp-uppenbrink_what_2019,
+	title = {What makes a planet habitable?},
+	volume = {364},
+	number = {6439},
+	journal = {Science},
+	author = {Fahrenkamp-Uppenbrink, Julia},
+	year = {2019},
+	pages = {447--449},
+}
+
+@inproceedings{meyer_way_2018,
+	title = {On the way to research objects for environmental genomics (or metagenomics).},
+	booktitle = {{RO}},
+	author = {Meyer, Folker and Finn, Robert D and Gerlach, Wolfgang and Mitchell, Alex L and Harrison, Travis and Wilke, Andreas},
+	year = {2018},
+}
+
+@incollection{meyer_metagenomics_2014,
+	title = {{METAGENOMICS}: {A} {GUIDE} {FROM} {SAMPLING} {TO} {DATA} {ANALYSIS}},
+	booktitle = {The {Role} of {Bioinformatics} in {Agriculture}},
+	publisher = {Apple Academic Press},
+	author = {Meyer, Folker},
+	year = {2014},
+	pages = {387--414},
+}
+
+@inproceedings{schmidt_towards_2021-1,
+	title = {Towards a trustworthy, secure and reliable enclave for machine learning in a hospital setting: {The} {Essen} {Medical} {Computing} {Platform} ({EMCP})},
+	booktitle = {2021 {IEEE} {Third} {International} {Conference} on {Cognitive} {Machine} {Intelligence} ({CogMI})},
+	publisher = {IEEE},
+	author = {Schmidt, Hendrik FR and Schlötterer, Jörg and Bargull, Marcel and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
+	year = {2021},
+	pages = {116--123},
+}
+
+@article{meyer_research_nodate,
+	title = {Research briefing},
+	author = {Meyer, F and {others}},
+}
+
+@article{abdelaziz_2021_nodate,
+	title = {2021 {IEEE} {Third} {International} {Conference} on {Cognitive} {Machine} {Intelligence} ({CogMI}){\textbar} 978-1-6654-1621-4/21/\$31.00{\textbackslash}copyright 2021 {IEEE}{\textbar} {DOI}: 10.1109/{COGMI52975}. 2021.00043},
+	author = {Abdelaziz, Musa and Abdeljaber, Luay and Abdelzaher, Tarek and Afshar, Armin and Aggarwal, Mohit and Alazraki, Lisa and Alemzadeh, Homa and Ammar, Adel and Angryk, Rafal and Arya, Akhil and {others}},
+}
+
+@article{cernava_metadata_2022,
+	title = {Metadata harmonization–{Standards} are the key for a better usage of omics data for integrative microbiome analysis},
+	volume = {17},
+	number = {1},
+	journal = {Environmental microbiome},
+	author = {Cernava, Tomislav and Rybakova, Daria and Buscot, François and Clavel, Thomas and McHardy, Alice Carolyn and Meyer, Fernando and Meyer, Folker and Overmann, Jörg and Stecher, Bärbel and Sessitsch, Angela and {others}},
+	year = {2022},
+	note = {Publisher: BioMed Central},
+	pages = {1--10},
+}
+
+@article{glass_mixs-sa_2022,
+	title = {{MIxS}-{SA}: {A} {MIxS} extension defining the minimum information standard for sequence data from symbiont-associated micro-organisms.},
+	author = {Glass, Elizabeth M and Dribinsky, Yekaterina and Yilmaz, Pelin and Levin, Hal and Van Pelt, Robert and Wendel, Doug and Wilke, Andreas and Eisen, Jonathan A and Huse, Sue and Shipanova, Anna and {others}},
+	year = {2022},
+}
